--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-6">
+      <h3>PESQUISA ENGAGEMENT + CENSO 2024</h3>
+      <h2>&nbsp;</h2>
+
+      <p style="font-size: 12px;"><strong>Vigência de 01 de Novembro à 30 de Novembro de 2024</strong></p>
+      <br>
+      <p style="font-size: 12px;">Informe o código de oito dígitos fornecido e clique em "Iniciar Pesquisa"</p>
+
+      <%= form_with url: new_survey_path, method: :get, html: { id: "formPesquisa" } do %>
+        <p>
+          <%= text_field_tag :code, nil, class: 'simple-form', placeholder: 'Código', autocomplete: 'off', maxlength: 8, style: 'width:138px;' %>
+        </p>
+        <p>
+          <%= submit_tag 'Iniciar Pesquisa »', class: 'btn btn-sucess-geg', id: "lnkPesquisa" %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+</div>
