--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,31 +1,20 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-6">
-      <h3>PESQUISA ENGAGEMENT + CENSO 2024</h3>
+      <h3>Pesquisa <%= @survey.code %> finalizada!</h3>
       <h2>&nbsp;</h2>
-
-      <p style="font-size: 12px;"><strong>Vigência de 01 de Novembro à 30 de Novembro de 2024</strong></p>
       <br>
-      <p style="font-size: 12px;">Informe o código de oito dígitos fornecido e clique em "Iniciar Pesquisa"</p>
-
-      <!-- Formulário de pesquisa -->
-      <%= form_with url: new_survey_path, method: :get, html: { id: "formPesquisa", onsubmit: "return validarCodigo();" } do %>
-        <p>
-          <%= text_field_tag :code, nil, class: 'simple-form', placeholder: 'Código', autocomplete: 'off', maxlength: 8, style: 'width:138px;', oninput: "this.value = this.value.toUpperCase();" %>
-        </p>
-        <p>
-          <%= submit_tag 'Iniciar Pesquisa »', class: 'btn btn-sucess-geg', id: "lnkPesquisa" %>
-        </p>
-      <% end %>
+      <h4 style="color: #5cb85c;"><strong>Obrigado por participar da pesquisa!</strong></h4>
+      <p>Pronto! Agora você já pode fechar esta janela.</p>
+      <br>
+      <p>Ou caso tenha outros colaboradores, pode-se iniciar outra pesquisa clicando no botão abaixo</p>
+      <p>
+        <%= link_to "INICIAR NOVA PESQUISA >>", root_path, class: 'btn btn-sucess-geg' %>
+      </p>
       <br>
       <br>
       <br>
       <p style="font-size: 12px;">@ 2024 - Gente e Gestão</p>
-
-      <!-- Mensagem de erro -->
-      <div id="erroCodigo" class="alert alert-danger" style="display: none;">
-        Código inválido! Por favor, insira um código válido.
-      </div>
     </div>
   </div>
 </div>
