--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
     "08MGGA4W", "NWYHEV7M", "A7611WFT", "16ZZFZAH", "C7CKOFRR", "2C1CWS17", "NOA04FF1", "7LYM49ZI", "J1W3PBCT",
     "RBVRQXKO", "HGPFFMV5", "V3TS7WO3", "ILI0ARCE", "7M470ELB", "BPQD4UHR", "HSRMNP4T", "7LMX2FEF", "4CUFUXS7",
     "0MNOXTJ6", "9IGPXZ8Y", "KNOFWVF8", "VVKQF4PA", "SS10WYSF", "8ETRIHKA", "VDHL2KLB", "B87JHTZ6", "CRH5S82F",
-    "0MTYTB66", "XTDL8N86", "6NO9LS3S", "WZVSCQ9J", "5XHJM6TE", "Q7OW3B8P", "S940Z4UC", "FJ5EYO10"
+    "0MTYTB66", "XTDL8N86", "6NO9LS3S", "WZVSCQ9J", "5XHJM6TE", "Q7OW3B8P", "S940Z4UC", "FJ5EYO10", "TESTE"
   ];
 
   // Função para validar o código
